Backend - Core Features (Todo/Folder)